@@ -39,6 +39,7 @@ import java.util.List;
 
 import org.restlet.data.MediaType;
 import org.restlet.representation.DomRepresentation;
+import org.restlet.representation.EmptyRepresentation;
 import org.restlet.representation.FileRepresentation;
 import org.restlet.representation.InputRepresentation;
 import org.restlet.representation.ReaderRepresentation;
@@ -124,44 +125,63 @@ public class DefaultConverter extends ConverterHelper {
             UniformResource resource) throws IOException {
         Object result = null;
 
-        if (targetClass.isAssignableFrom(representation.getClass())) {
-            result = (T) representation;
-        } else {
-            if (String.class.isAssignableFrom(targetClass)) {
-                result = representation.getText();
-            } else if (StringRepresentation.class.isAssignableFrom(targetClass)) {
-                result = new StringRepresentation(representation.getText(),
-                        representation.getMediaType());
-            } else if (Document.class.isAssignableFrom(targetClass)) {
-                result = new DomRepresentation(representation).getDocument();
-            } else if (DomRepresentation.class.isAssignableFrom(targetClass)) {
-                result = new DomRepresentation(representation);
-            } else if (File.class.isAssignableFrom(targetClass)) {
-                if (representation instanceof FileRepresentation) {
-                    result = ((FileRepresentation) representation).getFile();
+        if (representation != null) {
+            if (targetClass != null) {
+                if (targetClass.isAssignableFrom(representation.getClass())) {
+                    result = (T) representation;
+                } else {
+                    if (String.class.isAssignableFrom(targetClass)) {
+                        result = representation.getText();
+                    } else if (StringRepresentation.class
+                            .isAssignableFrom(targetClass)) {
+                        result = new StringRepresentation(representation
+                                .getText(), representation.getMediaType());
+                    } else if (EmptyRepresentation.class
+                            .isAssignableFrom(targetClass)) {
+                        result = null;
+                    } else if (Document.class.isAssignableFrom(targetClass)) {
+                        result = new DomRepresentation(representation)
+                                .getDocument();
+                    } else if (DomRepresentation.class
+                            .isAssignableFrom(targetClass)) {
+                        result = new DomRepresentation(representation);
+                    } else if (File.class.isAssignableFrom(targetClass)) {
+                        if (representation instanceof FileRepresentation) {
+                            result = ((FileRepresentation) representation)
+                                    .getFile();
+                        }
+                    } else if (InputStream.class.isAssignableFrom(targetClass)) {
+                        result = representation.getStream();
+                    } else if (InputRepresentation.class
+                            .isAssignableFrom(targetClass)) {
+                        result = new InputRepresentation(representation
+                                .getStream());
+                    } else if (Reader.class.isAssignableFrom(targetClass)) {
+                        result = representation.getReader();
+                    } else if (ReaderRepresentation.class
+                            .isAssignableFrom(targetClass)) {
+                        result = new ReaderRepresentation(representation
+                                .getReader());
+                    } else if (SaxRepresentation.class
+                            .isAssignableFrom(targetClass)) {
+                        result = new SaxRepresentation(representation);
+                    }
                 }
-            } else if (InputStream.class.isAssignableFrom(targetClass)) {
-                result = representation.getStream();
-            } else if (InputRepresentation.class.isAssignableFrom(targetClass)) {
-                result = new InputRepresentation(representation.getStream());
-            } else if (Reader.class.isAssignableFrom(targetClass)) {
-                result = representation.getReader();
-            } else if (ReaderRepresentation.class.isAssignableFrom(targetClass)) {
-                result = new ReaderRepresentation(representation.getReader());
-            } else if (SaxRepresentation.class.isAssignableFrom(targetClass)) {
-                result = new SaxRepresentation(representation);
             }
-        }
 
-        if (result instanceof Representation) {
-            Representation resultRepresentation = (Representation) result;
+            if (result instanceof Representation) {
+                Representation resultRepresentation = (Representation) result;
 
-            // Copy the variant metadata
-            resultRepresentation.setCharacterSet(representation
-                    .getCharacterSet());
-            resultRepresentation.setMediaType(representation.getMediaType());
-            resultRepresentation.setEncodings(representation.getEncodings());
-            resultRepresentation.setLanguages(representation.getLanguages());
+                // Copy the variant metadata
+                resultRepresentation.setCharacterSet(representation
+                        .getCharacterSet());
+                resultRepresentation
+                        .setMediaType(representation.getMediaType());
+                resultRepresentation
+                        .setEncodings(representation.getEncodings());
+                resultRepresentation
+                        .setLanguages(representation.getLanguages());
+            }
         }
 
         return (T) result;
